fix(ModalContent): Prevent horizontal overflow scroll

--- a/packages/forma-36-react-components/src/components/Modal/ModalContent/ModalContent.css
+++ b/packages/forma-36-react-components/src/components/Modal/ModalContent/ModalContent.css
@@ -8,5 +8,6 @@
   font-size: var(--font-size-m);
   font-family: var(--font-stack-primary);
   line-height: var(--line-height-default);
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
